# loka-zk-middleware

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: api.md  architecture.md
examples/: square_proof.rs  sum_proof.rs
scripts/: build.sh  lint.sh  setup.sh  test.sh
src/: config.rs  errors.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  models.rs
src/zk/: circuits.rs  mod.rs  service.rs
tests/: integration_test.sh  smoke_test.sh
