[package]
name = "loka-zk-middleware"
version = "0.1.0"
edition = "2021"
description = "A cloud API middleware microservice for Zero-Knowledge proof generation and verification, designed for privacy-enhanced Agentic payment flows"
license = "MIT"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ark-ff = "0.5"
ark-ec = "0.5"
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-snark = "0.5"
ark-relations = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["snark"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
actix-rt = "2"
